# HR_BOT_V1

./: .env.example  .gitignore  API_REFERENCE.md  CACHE_CLEARING_FEATURE.md  CLIENT_PRICING_VALIDATED.md  DEPLOYMENT.md  HALLUCINATION_FIX_V2.md  HIERARCHICAL_SETUP.md  NOVA_MICRO_LIMITATION.md  NOVA_MICRO_PROMPT_OPTIMIZATION.md  PRODUCTION.md  QUICKSTART.md  README.md  RELEASE_NOTES_v4.1.md  RELEASE_NOTES_v4.2.md  RELEASE_NOTES_v6.0.md  S3_CACHE_IMPLEMENTATION.md  SEMANTIC_CACHE_SUCCESS.md  TOOL_INVOCATION_FIX.md  UI_ENHANCEMENTS_V2.md  chainlit_en-GB.md  chainlit_en-IN.md  llm_pricing.json  prewarm_cache.py  pyproject.toml  run_cost_estimate.py  test_apideck_full.py  test_bot.py  test_final_semantic.py  test_s3_cache.py  v4.2_IMPLEMENTATION_SUMMARY.md  validate_token_usage.py
.chainlit/: config.toml
.chainlit/translations/: bn.json  de-DE.json  el-GR.json  en-IN.json  en-US.json  es.json  fr-FR.json  gu.json  he-IL.json  hi.json  ja.json  kn.json  ko.json  ml.json  mr.json  nl.json  ta.json  te.json  zh-CN.json  zh-TW.json
data/: Reimbursement_Policy.docx  Sexual_Harassment_Policy.docx  Whistleblower_Policy.docx
data/Executive-Only-Documents/: Annual Workforce Planning & Budget Report – FY2025.docx  CXO Employees Car Rental Policy.docx  Compensation and Bonus Policy – Leadership Edition.docx  Performance Calibration & Appraisal Review Guidelines.docx
data/Master-Document/: Knowledge Bot – Action Links and Steps.docx
data/Regular-Employee-Documents/: Leave_Policy.docx  NDA_Policy.docx
data/eval/: eval_dataset.jsonl  metrics.json  ragas_like_metrics.json  ragas_like_results.json  retrieval_logs.jsonl
data/eval/production/: examples.csv  metrics.json
deploy/: chat-chainlit.service
docs/: AUTH_ERROR_FIX.md
public/: custom.js
src/hr_bot/: crew.py  crew_hierarchical.py  main.py
src/hr_bot/config/: agents.yaml  agents_hierarchical.yaml  settings.py  tasks.yaml  tasks_hierarchical.yaml
src/hr_bot/eval/: __init__.py  generate_dataset.py  ragas_eval.py  ragas_production_eval.py  run_eval.py
src/hr_bot/test_docs/: AUDIT_SUMMARY.md  BUGFIX_v3.2_REPORT.md  DEPLOYMENT_GUIDE_v3.2.md  FIX_DOCUMENTATION.md  PROJECT_SUMMARY.md  PROMPT_IMPROVEMENTS_v3.2.1.md  SECURITY_AUDIT_v3.2.2_COMPREHENSIVE.md  SECURITY_AUDIT_v3.2.md  v3.2.2_IMPLEMENTATION_LOG.md  v3.2.2_RELEASE_SUMMARY.md  v3.2_IMPLEMENTATION_LOG.md  v3.2_RELEASE_SUMMARY.md
src/hr_bot/tools/: __init__.py  apideck_hr_tool.py  apideck_hr_tool_old.py  hybrid_rag_tool.py  master_actions_tool.py
src/hr_bot/ui/: app.py  app_gradient.py  app_old.py  chainlit_app.py
src/hr_bot/ui/assets/: ui.css
src/hr_bot/utils/: cache.py  document_classifier.py  s3_loader.py
storage/response_cache/: cache_stats.json
test_scripts/: README.md  analyze_similarity.py  enterprise_nova_lite_test.py  enterprise_test_suite.py  manage_cache.py  nova_lite_test_report_20251102_120937.json  nova_lite_test_report_20251102_122520.json  nova_lite_test_report_20251102_130043.json  nova_lite_test_report_20251102_132711.json  nova_lite_test_report_20251102_134515.json  nova_lite_test_report_20251102_140649.json  nova_lite_test_report_20251102_151253.json  quick_test_v3.2.2.py  run_crew.py  test_apideck.py  test_cache.py  test_cache_clearing.py  test_drug_test_query.py  test_hierarchical.py  test_memory.py  test_memory_interactive.sh  test_semantic_cache.py  test_semantic_simple.py  test_v3.2.2_fixes.py  test_v3.2_fixes.py
tests/: test_rag_agent.py
